--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="scripts.js"></script>
   </head>
+
   <body>
-    
+    <div class="container">
+        <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
+        <aside class="sidebar">
+            <div class="logo">
+                <img class="logo-icon" src="assets/logo-light.svg" alt="">
+            </div>
+            <nav>
+                <div class="board">
+                    <h4>ALL BOARDS (1)</h4>
+                    <button class="board-btn">Launch Career</button>
+                </div>
+            </nav>
+        </aside>
+
+    </div>
   </body>
 </html>
