--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="scripts.js"></script>
   </head>
-
+  
   <body>
     <div class="container">
         <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
@@ -30,6 +30,20 @@
             </nav>
         </aside>
 
+        <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
+        <div class="launch-sidebar">
+            <header>
+                <div>
+                    <h2 class="board-list">Launch Career<span class="dropdown-arrow"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="#635FC7" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></span></h2>
+                </div>
+            </header>
+
+            <div class="columns">
+                <main>
+                    
+                </main>
+            </div>
+        </div>
     </div>
   </body>
 </html>
