--- a/index.html
+++ b/index.html
@@ -71,6 +71,30 @@
                     </div>
                 </main>
 
+                <!-- Modal for viewing/editing tasks -->
+                <div class="modal-backdrop" id="modal-backdrop">
+                    <div class="modal">
+                        <!-- Close button -->
+                        <button class="close-btn" id="close-modal">&times;</button>
+                        <h3>Task</h3>
+
+                        <!-- Task title input -->
+                        <label for="task-title">Title</label>
+                        <input type="text" id="task-title">
+
+                        <!-- Task description textarea -->
+                        <label for="task-description">Description</label>
+                        <textarea id="task-description" rows="5"></textarea>
+
+                        <!-- Task status dropdown -->
+                        <label for="task-status">Status</label>
+                        <select id="task-status">
+                            <option value="todo">todo</option>
+                            <option value="doing">doing</option>
+                            <option value="done">done</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
